complete search system rebuild . Add my sql typORM entities

--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "@nestjs/jwt": "^11.0.1",
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/passport": "^11.0.5",
+    "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/serve-static": "^4.0.2",
     "@nestjs/typeorm": "^10.0.2",
+    "mongoose": "^8.19.3",
     "@types/joi": "^17.2.2",
     "@types/multer": "^2.0.0",
     "bcrypt": "^6.0.0",
