--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,12 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false
-  }
+  },
+  "exclude": [
+    "node_modules",
+    "dist",
+    "**/*.spec.ts",
+    "src/database/create-indexes.ts",
+    "src/database/normalize-gender-and-dob.ts"
+  ]
 }
